<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_about_lorawan"
        android:enabled="true"
        android:icon="@drawable/icon_wifi"
        android:title="@string/label_menu_a" />

    <item
        android:id="@+id/IoT_Fragment"
        android:enabled="true"
        android:icon="@drawable/ic_logo_iot"
        android:title="@string/IoT" />
    <item
        android:id="@+id/testfragment"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/test" />

    <item
        android:id="@+id/fragment_settings"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings" />
    <item
        android:id="@+id/fragment_sensor_panels"
        android:enabled="true"
        android:icon="@drawable/ic_panels"
        android:title="@string/label_menu_panels" />

</menu>