<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_extra_high">

        <!-- ¿Qué es? -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/what_is_iot"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_iot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/what_is_iot_description"
            style="@style/AppSupportingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/what_is_iot_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/what_is_iot" />

        <!-- Componentes clave de IoT -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/key_components"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/key_components"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/what_is_iot_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/key_components_description"
            style="@style/AppSupportingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/key_components_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/key_components" />

        <!-- Ventajas -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/advantages"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/advantages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/key_components_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/advantages_description"
            style="@style/AppSupportingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/advantages_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advantages" />

        <!-- Retos -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/challenges"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/challenges"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advantages_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/challenges_description"
            style="@style/AppSupportingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/challenges_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenges" />

        <!-- Ejemplos de aplicaciones IoT -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/examples"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/examples"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenges_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/examples_description"
            style="@style/AppSupportingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/examples_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/examples" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
